--- a/src/client/app/ng2blog.html
+++ b/src/client/app/ng2blog.html
@@ -2,10 +2,10 @@
 <div>
   <span *ngIf="af.auth | async">
     Logged in as {{ (af.auth | async).github.username }}
-    <button>Log Out</button>
+    <button (click)="af.auth.logout()" class="btn">Log Out</button>
   </span>
   <span *ngIf="!(af.auth | async)">
-    <button (click)="af.auth.login()">Log In</button>
+    <button (click)="af.auth.login()" class="btn btn-primary">Log In</button>
   </span>
 </div>
 
