--- a/src/client/index.html
+++ b/src/client/index.html
@@ -20,8 +20,10 @@
   -->
 </head>
 <body>
-  <ng2blog-app>Loading...</ng2blog-app>
-
+  <container>
+    <ng2blog-app>Loading...</ng2blog-app>
+  </container>
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
   <script src="vendor/es6-shim/es6-shim.js"></script>
   <script src="vendor/systemjs/dist/system-polyfills.js"></script>
   <script src="vendor/angular2/bundles/angular2-polyfills.js"></script>
